TST-512 Fixed copy link wrapping Set copy link URL to truncate

--- a/assets/scss/custom/layout/_ts-party-summary.scss
+++ b/assets/scss/custom/layout/_ts-party-summary.scss
@@ -35,7 +35,12 @@
         }
     }
     a {
-        margin-left:1rem;
+        display: block;
+        margin-left: 1rem;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 225px;
     }
 }
 
